# fw_checker_test

./: .clang-format  .gitignore  CMakeLists.txt  README.md
boards/: CMakeLists.txt  board.h
boards/f373/: CMakeLists.txt  board.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
boards/nucleo_l476/: CMakeLists.txt  board.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_clock.c
cmake/: binutils-arm-none-eabi.cmake  stm32f3.cmake  toolchain-arm-none-eabi.cmake
include/: dfu_host.h  logging.h
include/core/: assert.h  crc.h  critical_section.h  toolchain.h  util.h  util_internal.h  util_macro.h
source/: CMakeLists.txt  logging.c  main.c
source/core/: CMakeLists.txt  assert.c  crc16_sw.c  crc32_sw.c  crc8_sw.c  critical_section.c  hex.c
source/dfu_host/: CMakeLists.txt  dfu_host.c
targets/: CMakeLists.txt
targets/CMSIS/: CMakeLists.txt
targets/STM32F3/: CMakeLists.txt  cmsis.h  stm32f3xx_hal_conf.h
targets/STM32F3/TOOLCHAIN_GCC/: STM32L476RETx_FLASH.ld
targets/STM32L4/: CMakeLists.txt  cmsis.h  stm32l4xx_hal_conf.h
targets/STM32L4/TOOLCHAIN_GCC/: STM32F373CBTX_FLASH.ld
